# reflex-blossom-carousel

./: .gitignore  README.md  pyproject.toml
blossom_carousel_demo/: requirements.txt  rxconfig.py
blossom_carousel_demo/assets/: carousel.css
blossom_carousel_demo/blossom_carousel_demo/: blossom_carousel_demo.py
blossom_carousel_demo/reflex.lock/: package.json
custom_components/reflex_blossom_carousel/: __init__.py  blossom_carousel.py  blossom_carousel.pyi
scripts/: create_github_repo.sh
specs/: README.md
specs/analysis/: blossom-carousel-upstream.md
specs/api/: component-api-v1.md
specs/plans/: implementation-plan.md
specs/prd/: reflex-blossom-carousel.md
specs/technical/: architecture.md
tests/: __init__.py  test_imperative_navigation.py
